# web-sandbox

./: chat.css  chat.js  hellotornado.py  index.htm  smiley.css
alarm/: Makefile  alarm.py
alarm/templates/: alarm.htm
battleship/: README.md  bso.py  srv.conf
battleship/templates/: 404.htm  game.htm  new.htm  styles.htm
bootstrap/: hello.htm  nav0.htm  nav1.htm  visibility.htm
hellows/: README.md  chat.css  chat.js  hellotornado.py  index.htm  smiley.css  wschat.py
js/d3/: hello.htm
nginx-sqlog/: nginx-sqlog.cabal
nginx-sqlog/app/: Main.hs
nginx-sqlog/doc/: project.org
nginx-sqlog/src/System/: FileUpdate.hs
rtc/: media.htm
