name:                nginx-sqlog
version:             0.0.1.0
synopsis:            a simple nginx monitoring utility
description:         Please see README.md
-- homepage:            https://github.com/githubuser/nginx-sqlog#readme
license:             BSD3
license-file:        LICENSE
author:              Dmytro S.
maintainer:          dmytrish@gmail.com
copyright:           2016 Dmytro S.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.FileUpdate
  build-depends:       base
                     , fsnotify
                     , time
                     , filepath
                     , directory
                     , containers
                     , bytestring
                     , stm
  default-language:    Haskell2010

executable nginx-sqlog
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nginx-sqlog
                     , bytestring
  default-language:    Haskell2010

test-suite nginx-sqlog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nginx-sqlog
                     , fsnotify
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--  type:     git
--  location: https://github.com/githubuser/nginx-sqlog
